--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,35 @@
-* {
+body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
-  color: #0b032d;
-  box-sizing: border-box;
+  font-weight: 400;
+  line-height: 1.75;
+  text-rendering: optimizeLegibility;
   margin: 0px;
   padding: 0px;
   outline: none;
-  text-rendering: optimizeLegibility;
+  color: #222222;
+  box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+h2 {font-size: 2.441rem;}
+
+h3 {font-size: 1.953rem;}
+
+h4 {font-size: 1.563rem;}
+
+h5 {font-size: 1.25rem;}
+
+small, .text_small {font-size: 0.8rem;}
+
+p {margin-bottom: 1rem;}
