feat: finish login screen

--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -1,40 +1,49 @@
 body {
-  background-image: url('../../assets/img/login-bg.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-color: #2828280f;
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  padding-right: 16% !important;
 }
 
 #wrapper {
-  max-width: 320px;
-  min-height: 330px;
-  max-height: 330px;
+  max-width: 310px;
+  min-width: 310px;
+  min-height: 400px;
+  max-height: 400px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 3px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  padding: 50px 0;
+  padding: 25px 15px;
   background-color: white;
 }
 
 #login-form {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 90%;
   height: 80%;
-  padding: 15px;
 }
 
 #form-inputs-container {
   margin-bottom: 25px;
+}
+
+.input-container {
+  margin-bottom: 30px;
+}
+
+.input-container:last-child {
+  margin-bottom: unset;
+}
+
+.MuiInputLabel-asterisk {
+  display: none !important;
 }
 
 #form-actions-container {
@@ -42,11 +51,16 @@ body {
   max-width: 100%;
   display: flex;
   justify-content: space-evenly;
+  margin-top: 30px;
 }
 
-#form-btn-login {}
+#form-actions-container button {
+  width: 100px;
+}
 
-#form-btn-clear {}
+#form-options-container {
+  align-self: flex-end;
+}
 
 #logo {
   width: 140px;
